# calls-order-applicative

./: .gitignore  CHANGELOG.md  LICENSE  calls-order-applicative.cabal
examples/: Main.hs
src/Control/Applicative/: Calculation.hs
src/Control/Applicative/Calculation/: Internal.hs
src/Control/Monad/: OrdCalc.hs  OrdCall.hs
src/Control/Monad/OrdCalc/: Internal.hs
src/Control/Monad/OrdCall/: Internal.hs
test/: Spec.hs
